--- a/#src/index.html
+++ b/#src/index.html
@@ -95,6 +95,7 @@
         <li><a href="account.html" target="_blank">Личный кабинет</a></li>
         <li><a href="profile.html" target="_blank">Личные данные</a></li>
         <li><a href="profile-edit.html" target="_blank">Отредактировать данные - ЛК</a></li>
+        <li><a href="profile-edit-le.html" target="_blank">Отредактировать данные юр.лицо - ЛК</a></li>
         <li><a href="orders-current.html" target="_blank">Текущие заказы</a></li>
         <li><a href="orders-current-empty.html" target="_blank">Текущие заказы - нет заказов</a></li>
         <li><a href="orders-history.html" target="_blank">История заказов</a></li>
