--- a/lescraft/order-reg.html
+++ b/lescraft/order-reg.html
@@ -581,6 +581,13 @@
                                                                     <p>Доставка до&nbsp;адреса</p>
                                                                 </div>
                                                             </label>
+                                                            <label class="text-radio">
+                                                                <input type="radio" name="order-delivery" value="3" data-tab="3">
+                                                                <div class="text-radio__content">
+                                                                    <div class="text-radio__icon"><img src="img/svg/export.svg" alt></div>
+                                                                    <p>Дополнительный способ доставки</p>
+                                                                </div>
+                                                            </label>
                                                         </div>
                                                     </div>
                                                     <div class="order-p__delivery__blocks">
@@ -632,12 +639,18 @@
                                                                     <div class="desc-block__item">
                                                                         <div class="desc-block__contacts">
                                                                             <div class="item-contact">
-                                                                                <span>Адрес доставки</span>
-                                                                                <span data-full-address>г. Краснодар, ул. Красная, 45</span>
+                                                                                <span>Стоимость</span>
+                                                                                <span class="rub">499</span>
                                                                             </div>
                                                                             <div class="item-contact">
-                                                                                <span>Стоимость</span>
-                                                                                <span>Будет рассчитана менеджером</span>
+                                                                                <span>Срок доставки</span>
+                                                                                <span class="item-tippy">
+                                                                                    3 дня 
+                                                                                    <div class="tippy">
+                                                                                        <svg><use xlink:href="img/svg/sprite.svg#tippy"></use></svg>
+                                                                                        <p>Сроки доставки увеличены, так как часть заказа находится на другом складе</p>
+                                                                                    </div>                                                                                   
+                                                                                </span>
                                                                             </div>
                                                                         </div>
                                                                     </div>
