--- a/lescraft/profile-edit.html
+++ b/lescraft/profile-edit.html
@@ -470,28 +470,31 @@
                             <!--page-row__content-->
                             <div class="page-row__content">
                                 <div class="profile-p__cols">
-                                    <div class="profile-p__col">
-                                        <div class="profile-p__lbl">Личная информация</div>
-                                        <div class="item-contact">
-                                            <span>Телефон</span>
-                                            <span>+7 937 635-36-36</span>
+                                    <div class="profile-p__col-wrapper">
+                                        <div class="profile-p__col">
+                                            <div class="profile-p__lbl">Личная информация</div>
+                                            <div class="item-contact">
+                                                <span>Телефон</span>
+                                                <span>+7 937 635-36-36</span>
+                                            </div>
+                                            <div class="item-contact">
+                                                <span>Фамилия</span>
+                                                <span>Иванов</span>
+                                            </div>
+                                            <div class="item-contact">
+                                                <span>Имя</span>
+                                                <span>Георгий</span>
+                                            </div>
+                                            <div class="item-contact">
+                                                <span>Отчество</span>
+                                                <span>Андреевич</span>
+                                            </div>
+                                            <div class="item-contact">
+                                                <span>Email</span>
+                                                <span>example@mail.ru</span>
+                                            </div>
                                         </div>
-                                        <div class="item-contact">
-                                            <span>Фамилия</span>
-                                            <span>Иванов</span>
-                                        </div>
-                                        <div class="item-contact">
-                                            <span>Имя</span>
-                                            <span>Георгий</span>
-                                        </div>
-                                        <div class="item-contact">
-                                            <span>Отчество</span>
-                                            <span>Андреевич</span>
-                                        </div>
-                                        <div class="item-contact">
-                                            <span>Email</span>
-                                            <span>example@mail.ru</span>
-                                        </div>
+                                        <button class="btn stroke-btn mod-open-btn desktop-hidden" data-modal="profile-edit-modal">Изменить данные</button>
                                     </div>
                                     <div class=" profile-p__addresses profile-p__col">
                                         <div class="profile-p__lbl">Адреса доставки</div>
@@ -501,7 +504,7 @@
                                         </button>
                                     </div>
                                 </div>
-                                <button class="btn stroke-btn mod-open-btn" data-modal="profile-edit-modal">Изменить данные</button>
+                                <button class="btn stroke-btn mod-open-btn mob-hidden" data-modal="profile-edit-modal">Изменить данные</button>
                             </div>
                         </div>
                     </div>
