--- a/#src/profile-edit.html
+++ b/#src/profile-edit.html
@@ -68,7 +68,9 @@
                                                 <span>example@mail.ru</span>
                                             </div>
                                         </div>
-                                        <button class="btn stroke-btn mod-open-btn desktop-hidden" data-modal="profile-edit-modal">Изменить данные</button>
+                                        <div class="desktop-hidden">
+                                            <button class="btn stroke-btn mod-open-btn" data-modal="profile-edit-modal">Изменить данные</button>
+                                        </div>                                    
                                     </div>
                                     <div class=" profile-p__addresses profile-p__col">
                                         <div class="profile-p__lbl">Адреса доставки</div>
@@ -78,7 +80,9 @@
                                         </button>
                                     </div>
                                 </div>
-                                <button class="btn stroke-btn mod-open-btn mob-hidden" data-modal="profile-edit-modal">Изменить данные</button>
+                                <div class="mob-hidden">
+                                    <button class="btn stroke-btn mod-open-btn" data-modal="profile-edit-modal">Изменить данные</button>
+                                </div>                               
                             </div>
                         </div>
                     </div>
