--- a/#src/orders-history.html
+++ b/#src/orders-history.html
@@ -14,7 +14,7 @@
                 <!--page-top-->
                 <div class="page-top page-top--account">
                     <div class="container">
-                        @@include('_breadcrumbs-2.html', {"page1": "Личный кабинет", "page2": "История заказов"})
+                        @@include('_breadcrumbs.html', {"page": "История заказов"})
                         <a href="account.html" class="btn h6 back-btn">
                             <svg><use xlink:href="img/svg/sprite.svg#btn-prev"></use></svg>
                             Назад
