--- a/#src/price-list.html
+++ b/#src/price-list.html
@@ -14,7 +14,7 @@
                 <!--page-top-->
                 <div class="page-top">
                     <div class="container">
-                        @@include('_breadcrumbs-2.html', {"page1": "Личный кабинет", "page2": "Прайс-лист"})
+                        @@include('_breadcrumbs.html', {"page": "Прайс-лист"})
                     </div>
                 </div>
                 <!--price-list-p-->
